--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "rollup -c",
-    "dev": "cross-env ENV=development rollup -c --watch"
+    "build":"rollup -c",
+    "dev":"cross-env ENV=development rollup -c -W"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
